--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,11 +25,15 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.firebase:firebase-core:16.0.9'
-
-    implementation 'com.google.firebase:firebase-auth:16.0.5'
+    implementation "androidx.lifecycle:lifecycle-viewmodel:2.0.0"
+    implementation 'com.google.firebase:firebase-auth:17.0.0'
+    implementation 'com.google.firebase:firebase-firestore:19.0.1'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation 'com.android.support:design:28.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.0-alpha4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha4'
+    implementation 'android.arch.lifecycle:extensions:1.1.1'
 
 
 }
