--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Regist.RegistActivity"></activity>
+        <activity android:name=".NewList.NewListActivity"></activity>
+        <activity android:name=".Regist.RegistActivity" />
         <activity
             android:name=".Home.HomeActivity"
             android:label="@string/title_activity_home"
