--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity
+            android:name=".ProductsByList.ProductByListActivity"
+            android:label="@string/title_activity_product_by_list"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity android:name=".EditList.EditListActivity" />
         <activity
             android:name=".Products.ProductsActivity"
