--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,10 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".ResetPassword.ResetPasswordActivity"></activity>
         <activity
             android:name=".ProductsByList.ProductByListActivity"
             android:label="@string/title_activity_product_by_list"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".EditList.EditListActivity" />
         <activity
             android:name=".Products.ProductsActivity"
